# helpingbot

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
application/: services.py
config/: example.yaml  loader.py  settings.py
domain/: interfaces.py  models.py
infrastructure/: market_data.py  order_execution.py  persistence.py
presentation/: cli.py
risk/: basic.py
strategies/: sma.py
tests/: conftest.py
tests/application/: test_services.py
tests/config/: test_loader.py
tests/domain/: test_models.py
tests/infrastructure/: test_market_data.py  test_order_execution.py  test_persistence.py
tests/integration/: test_wiring.py
tests/presentation/: test_cli.py
tests/risk/: test_basic.py
tests/strategies/: test_sma.py
tests/utils/: test_backtesting.py  test_time.py  test_validation.py
utils/: backtesting.py  time.py  validation.py
